--- a/src/ch15-04-rc.md
+++ b/src/ch15-04-rc.md
@@ -12,7 +12,7 @@
 
 ### 使用 `Rc<T>` 來分享資料
 
-讓我們回顧範例 15-5 的 cons list 範例。回想一下我們當時適用 `Box<T>` 定義。這次我們會建立兩個列表，它們會同時共享第三個列表的所有權。概念上會如圖示 15-3 所示：
+讓我們回顧範例 15-5 的 cons list 範例。回想一下我們當時是用 `Box<T>` 定義。這次我們會建立兩個列表，它們會同時共享第三個列表的所有權。概念上會如圖示 15-3 所示：
 
 <img alt="Two lists that share ownership of a third list" src="img/trpl15-03.svg" class="center" />
 
